css changes and created a Route

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="https://oaidalleapiprodscus.blob.core.windows.net/private/org-MavJFDDOgtr64FK75ZThTTHf/user-DIR6usfpWk5PFtxo2rjMMXbR/img-Q7bhTeESJjtyZD5HkamFxGI7.png?st=2023-02-24T03%3A25%3A25Z&se=2023-02-24T05%3A25%3A25Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2023-02-24T00%3A12%3A51Z&ske=2023-02-25T00%3A12%3A51Z&sks=b&skv=2021-08-06&sig=AJbfUBMGQXjmcc45p/U4NjXZpao2gmilWQ0Gq9B5lNk%3D" />
+    <link rel="icon" href="https://oaidalleapiprodscus.blob.core.windows.net/private/org-MavJFDDOgtr64FK75ZThTTHf/user-DIR6usfpWk5PFtxo2rjMMXbR/img-9JfAx5Ay4X7MTai0mwcwXKGm.png?st=2023-02-27T22%3A38%3A34Z&se=2023-02-28T00%3A38%3A34Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2023-02-27T21%3A40%3A52Z&ske=2023-02-28T21%3A40%3A52Z&sks=b&skv=2021-08-06&sig=OCl6CKxMfSce%2BPJsmgfdUKT6Ow3r3k%2Bd5mHONMbkML0%3D" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
