--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://kit.fontawesome.com/12814fc666.js" crossorigin="anonymous"></script>
     <link rel="icon" href="https://openaicom.imgix.net/dc934ef7-f0cb-4f5f-bbae-51aa7b0550d9/openai-api.jpg?fm=auto&q=80&auto=compress,format&fit=min&rect=0,0,2048,2048&w=3840&h=3840" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
